# rust-gpu-experiments

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
experiment-1/: Cargo.toml  build.rs
experiment-1/src/: main.rs
scripts/: rustc-proxy
shader-1/: Cargo.toml  README.md
shader-1/src/: lib.rs
shaders/: fragment.spv  shader-manifest.json  vertex.spv
