[workspace]

members = [
    "experiment-1",
    "shader-1"
]

resolver = "2"

#  https://rust-gpu.github.io/rust-gpu/book/writing-shader-crates.html
# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
