[package]
name = "shader-1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]

# Dependencies for CPU and GPU code
[dependencies]
spirv-std = { git = "https://github.com/jfredett/rust-gpu", branch = "main" }
bytemuck = { version = "1.20.0", features = ["derive"] }
#spirv-std = { path = "../../rust-gpu/crates/spirv-std" }

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { version = "0.29", features = ["std"] }
rayon = "1.5"
