[package]
name = "shader-1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]

# Dependencies for CPU and GPU code
[dependencies]
# spirv-std = { git = "https://github.com/jfredett/rust-gpu", branch = "main" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", branch = "main" }
# spirv-std = "0.9"
#spirv-std = { path = "../../rust-gpu/crates/spirv-std" }

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rayon = "1.5"
